--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -13,10 +13,10 @@
         <img src="myBanner-2.jpg">
               <table class="center">
               <tr>
-         <td><a href="test.html"><img src="home.png"></a>
-         <td><a href="aboutme2.html"><img src="about.png"></a>
-         <td><a href="javascripts2.html"><img src="javascripts.png"></a>
-         <td><a href="apps2.html"><img src="apps.png"></a>
+                  <td><a href="test.html"><img src="home.png"></a></td>
+         <td><a href="aboutme2.html"><img src="about.png"></a></td>
+         <td><a href="javascripts2.html"><img src="javascripts.png"></a></td>
+         <td><a href="apps2.html"><img src="apps.png"></a></td>
          <td><a href="apps2.html"><img src="finalButton.png"></a></td>
               </tr>
         </table>
