--- a/aboutme2.html
+++ b/aboutme2.html
@@ -20,9 +20,10 @@
         <img src="myBanner-2.jpg">
               <table class="center">
               <tr>
-         <td><a href="test.html"><img src="home.png"></a>
-         <td><a href="aboutme2.html"><img src="about.png"></a>
-         <td><a href="javascripts2.html"><img src="javascripts.png"></a>
+         <td><a href="test.html"><img src="home.png"></a></td>
+         <td><a href="aboutme2.html"><img src="about.png"></a></td>
+         <td><a href="finalProjectPage.html"><img src="buttonFinal.png"></a></td>
+         <td><a href="javascripts2.html"><img src="javascripts.png"></a></td>
          <td><a href="apps2.html"><img src="apps.png"></a></td>
               </tr>
         </table>
