--- a/apps2.html
+++ b/apps2.html
@@ -10,10 +10,11 @@
       <p align="center">
         <img src="myBanner-2.jpg">
       <p align="center">
-          <a href="test.html"><img src="home.png"></a>
-          <a href="aboutme2.html"><img src="about.png"></a>
-          <a href="javascripts2.html"><img src="javascripts.png"></a>
-          <a href="apps2.html"><img src="apps.png"></a>
+         <td><a href="test.html"><img src="home.png"></a></td>
+         <td><a href="aboutme2.html"><img src="about.png"></a></td>
+         <td><a href="finalProjectPage.html"><img src="buttonFinal.png"></a></td>
+         <td><a href="javascripts2.html"><img src="javascripts.png"></a></td>
+         <td><a href="apps2.html"><img src="apps.png"></a></td>
       <h1>Apps</h1>
        
         <p>Apps, TBC</p>
