--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -32,6 +32,7 @@
         Likewise, a child's confidence growing and developing is necessary for future development, and this app can help with that!</p>
             <h2 id="finalProject-header"> Draw A Picture!</h2>
         <a href="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384"></a></h2><script src="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/o9U6zI4q1nE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </body>
     </center>
