--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -22,13 +22,13 @@
         </table>
       <h1 id="home-header">Ella's Final Project!</h1>
        
-        <p>For my final Project I created a user friendly app that allows people to explore drawing in a simple way. In my program<br>
+        <p>For my final Project I created a user friendly app that allows people to explore drawing in a simple way. In my program,<br>
         I included an erase button because I wanted people to have the option to alter their picture, or they can utilize this<br> 
         aspect if they make a mistake. The user has many color options they can use to create their picture. For some people, <br>
         creative activities are challenging. Therefore, this app includes an option where you can they can be given a suggestion<br>
-        of what to draw! Likewise, for young children this app can be an interatcive actvity considering recieve positive feedback <br>
-        on their drawings with just one click. The app has the duel benefit of creative time use and may trigger interest in computer. <br>
-        Although this porgram is simple, it is an easy way to be creative. Creativity<br>  does not have to be complicated it can be simple.<br></p>
+        of what to draw! Likewise, for young children this app can be an interatcive actvity considering they can receive positive feedback <br>
+        on their drawings with just one click. The app has the duel benefit of creative time use and may trigger interest in computer science. <br>
+        Although this program is simple, it is an easy way to be creative. Creativity does not have to be complicated, it can be simple.<br></p>
             <h2 id="finalProject-header"> Draw A Picture!</h2>
         <a href="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384"></a></h2><script src="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
         <h3 id="youtube_1-header"> The Features of this Program!</h3>
