--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -26,9 +26,10 @@
         I included an erase button because I wanted people to have the option to alter their picture, or they can utilize this<br> 
         aspect if they make a mistake. The user has many color options they can use to create their picture. For some people, <br>
         creative activities are challenging. Therefore, this app includes an option where you can they can be given a suggestion<br>
-        of what to draw! Likewise, for young children this app can be an interatcive actvity considering they can receive positive feedback <br>
-        on their drawings with just one click. The app has the duel benefit of creative time use and may trigger interest in computer science. <br>
-        Although this program is simple, it is an easy way to be creative. Creativity does not have to be complicated, it can be simple.<br></p>
+        of what to draw! Likewise, for young children this app can be an interative actvity because they can chose to receive positive<br>
+        feedback on their drawings. The app has the duel benefit of creative time use as well as possibly triggering an interest in computer <br>
+        science. Although this program is simple, it is an easy way to be creative. Creativity does not have to be complicated, it can be simple.<br>
+        Likewise, in my program you cannot draw outside the white rectangle, as this is more similar to how a realistic program would be modeled. </p>
             <h2 id="finalProject-header"> Draw A Picture!</h2>
         <a href="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384"></a></h2><script src="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
         <h3 id="youtube_1-header"> The Features of this Program!</h3>
